# Mx3face

./: .gitignore  CMakeLists.txt  README.md
assets/: config.txt
src/cpp/: main.cpp
src/cpp/utils/: cam.cpp  cam.h  face_core.h  face_recognition.cpp  face_recognition.h  fifo_queue.h  gui_view.cpp  gui_view.h  input_source.h  ipcam_stream.cpp  ipcam_stream.h  vdo_predec.cpp  vdo_predec.h  vms.cpp  vms.h  yolo_core.cpp  yolo_core.h  yolov8.cpp  yolov8.h
